# pallas-plugin-ai-media

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
src/pallas_plugin_chat/: __init__.py  config.py
src/pallas_plugin_sing/: __init__.py  config.py
src/pallas_plugin_sing/ncm_login/: __init__.py
tests/: test_chat_submit.py  test_sing_config.py  test_sing_task_ids.py
